// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-drawer-menu getContainer 1`] = `
<div
  class="div-wrapper"
/>
`;

exports[`rc-drawer-menu getContainer is null 1`] = `
<div
  class="react-wrapper"
>
  <div
    class="a"
    id="a"
    style="position: absolute; top: 0px; left: 0px; transition: transform .3s cubic-bezier(0.78, 0.14, 0.15, 0.86);"
  >
    test1
  </div>
  <div
    class="drawer-wrapper"
  >
    <div
      class="drawer drawer-left drawer-open"
      tabindex="-1"
    >
      <div
        class="drawer-mask"
      />
      <div
        class="drawer-content-wrapper"
        style=""
      >
        <div
          class="drawer-content"
        />
        <div
          class="drawer-handle"
        >
          <i
            class="drawer-handle-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rc-drawer-menu handler is null, render is null 1`] = `null`;

exports[`rc-drawer-menu handler is null，open=false 1`] = `null`;

exports[`rc-drawer-menu handler is null，open=true 1`] = `null`;

exports[`rc-drawer-menu levelMove is Array 1`] = `null`;

exports[`rc-drawer-menu levelMove is Array 2`] = `null`;

exports[`rc-drawer-menu switch open drawer 1`] = `
<div
  class="react-wrapper"
>
  <div
    id="a"
    style="position: absolute; top: 0px; left: 0px;"
  >
    test1
  </div>
  <div
    class="drawer-wrapper"
  >
    <div
      class="drawer drawer-left"
      tabindex="-1"
    >
      <div
        class="drawer-mask"
      />
      <div
        class="drawer-content-wrapper"
        style="transform: translateX(-100%);"
      >
        <div
          class="drawer-content"
        />
        <div
          class="drawer-handle"
        >
          <i
            class="drawer-handle-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rc-drawer-menu switch open drawer 2`] = `
<div
  class="react-wrapper"
>
  <div
    id="a"
    style="position: absolute; top: 0px; left: 0px;"
  >
    test1
  </div>
  <div
    class="drawer-wrapper"
  >
    <div
      class="drawer drawer-left drawer-open"
      tabindex="-1"
    >
      <div
        class="drawer-mask"
      />
      <div
        class="drawer-content-wrapper"
        style=""
      >
        <div
          class="drawer-content"
        />
        <div
          class="drawer-handle"
        >
          <i
            class="drawer-handle-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rc-drawer-menu switch open drawer 3`] = `
<div
  class="react-wrapper"
>
  <div
    id="a"
    style="position: absolute; top: 0px; left: 0px;"
  >
    test1
  </div>
  <div
    class="drawer-wrapper"
  >
    <div
      class="drawer drawer-left"
      tabindex="-1"
    >
      <div
        class="drawer-mask"
      />
      <div
        class="drawer-content-wrapper"
        style="transform: translateX(-100%);"
      >
        <div
          class="drawer-content"
        />
        <div
          class="drawer-handle"
        >
          <i
            class="drawer-handle-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
